[package]
name = "binance_md"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.3"
reqwest = { version = "0.11", features = ["json"] }
ordered-float = "3.0"
colored = "2.0"